; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_irq.c_acpi_gsi_to_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_irq.c_acpi_gsi_to_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_domain = type { i32 }

@acpi_gsi_domain_id = common dso_local global i32 0, align 4
@DOMAIN_BUS_ANY = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_gsi_to_irq(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.irq_domain*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* @acpi_gsi_domain_id, align 4
  %7 = load i32, i32* @DOMAIN_BUS_ANY, align 4
  %8 = call %struct.irq_domain* @irq_find_matching_fwnode(i32 %6, i32 %7)
  store %struct.irq_domain* %8, %struct.irq_domain** %5, align 8
  %9 = load %struct.irq_domain*, %struct.irq_domain** %5, align 8
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @irq_find_mapping(%struct.irq_domain* %9, i32 %10)
  %12 = load i32*, i32** %4, align 8
  store i32 %11, i32* %12, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %13, align 4
  %15 = icmp ugt i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  br label %20

17:                                               ; preds = %2
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  br label %20

20:                                               ; preds = %17, %16
  %21 = phi i32 [ 0, %16 ], [ %19, %17 ]
  ret i32 %21
}

declare dso_local %struct.irq_domain* @irq_find_matching_fwnode(i32, i32) #1

declare dso_local i32 @irq_find_mapping(%struct.irq_domain*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
